use base custom exceptions instead of case specific exceptions